// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Votes should render correctly with no votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-add"
    >
      <svg
        class="vote-button-add__icon"
      >
        icon-add.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with no votes and disabled voting 1`] = `<div />`;

exports[`Votes should render correctly with votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-remove"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
      >
        icon-remove.svg
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
    <button
      class="dot-button vote-button-add"
      disabled=""
    >
      <svg
        class="vote-button-add__icon"
      >
        icon-add.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with votes and disabled voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      class="dot-button vote-button-remove"
      disabled=""
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
      >
        icon-remove.svg
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
  </div>
</div>
`;
